--- a/client/index.html
+++ b/client/index.html
@@ -1,18 +1,40 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ToDoApp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Task List</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="main.js"></script>
 </head>
-
 <body>
-    <div id="to-do-list-div">
+    <h4>Task List</h4>
+    <form class="row g-3 m-2" id="taskForm">
+        <div class="col-auto">
+          <input class="form-control" type="text" id="task" placeholder="Task..." aria-label="default input example" required>
+        </div>
+        <div class="col-auto">
+          <button type="submit" class="btn btn-primary mb-3">Add</button>
+        </div>
+      </form>
+      <div class="card m-3" style="width: 18rem;">
+        <div class="card-header">
+          Pending
+        </div>
+        <ul class="list-group" id="ulListPending">
+          </ul>
+        </div>
+          <div class="card m-3" style="width: 18rem;">
+        <div class="card-header">
+          Completed
+        </div>
+        <ul class="list-group" id="ulListCompleted">
+          </ul>
+        </div>
+    <!-- <div id="to-do-list-div">
         <form onSubmit="" method="POST" id="taskForm">
             <input type="text" id="task" name="task" pla    ceholder="Add a new task.." required />
             <input type="submit" value="Add Task" />
@@ -23,6 +45,7 @@
         <h4>Completed</h4>
         <ul id="ulListCompleted">
         </ul>
-    </div>
+    </div> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
