--- a/client/index.html
+++ b/client/index.html
@@ -8,44 +8,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Task List</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="main.js"></script>
+    <script src="https://static.zohocdn.com/catalyst/sdk/js/2.0.0/catalystWebSDK.js"></script>
+<script src="/__catalyst/sdk/init.js"></script>    
 </head>
 <body>
-    <h4>Task List</h4>
-    <form class="row g-3 m-2" id="taskForm">
-        <div class="col-auto">
-          <input class="form-control" type="text" id="task" placeholder="Task..." aria-label="default input example" required>
-        </div>
-        <div class="col-auto">
-          <button type="submit" class="btn btn-primary mb-3">Add</button>
-        </div>
-      </form>
-      <div class="card m-3" style="width: 18rem;">
-        <div class="card-header">
-          Pending
-        </div>
-        <ul class="list-group" id="ulListPending">
-          </ul>
-        </div>
-          <div class="card m-3" style="width: 18rem;">
-        <div class="card-header">
-          Completed
-        </div>
-        <ul class="list-group" id="ulListCompleted">
-          </ul>
-        </div>
-    <!-- <div id="to-do-list-div">
-        <form onSubmit="" method="POST" id="taskForm">
-            <input type="text" id="task" name="task" pla    ceholder="Add a new task.." required />
-            <input type="submit" value="Add Task" />
-        </form>
-        <h4>Pending</h4>
-        <ul id="ulListPending">
-        </ul>
-        <h4>Completed</h4>
-        <ul id="ulListCompleted">
-        </ul>
-    </div> -->
+<button style="float: right;" class="btn btn-light" onclick="logout()">Logout</button>
+<div style="background-color:#6a6c6d;"> 			
+ <font face="Comic sans MS" size="7" color="black">
+   <strong style="margin-left:15px;">Task List</strong>
+ </font>					
+</div>
+<form class="row g-3 m-2" id="taskForm">
+    <div class="col-auto">
+      <input class="form-control" type="text" id="task" placeholder="Task..." aria-label="default input example" required>
+    </div>
+    <div class="col-auto">
+      <button type="submit" class="btn btn-secondary mb-3">Add</button>
+    </div>
+  </form>
+  <div class="card m-3" style="background-color:#6a6c6d">
+   <h3 style="text-align:center;background-color:#6a6c6d;padding:10px">Pending</h3>
+    <ul class="list-group" id="ulListPending">
+    </ul>
+  </div>
+  <div class="card m-3" style="background-color:#6a6c6d">
+    <h3 style="text-align:center;background-color:#6a6c6d;padding:10px">Completed</h3>
+    <ul class="list-group" id="ulListCompleted">  
+    </ul>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-</body>
+    <script src="main.js"></script>
+  </body>
 </html>
